[package]
name = "primality-test"
version = "0.1.1"
edition = "2021"
authors = ["tayu0110"]
license = "MIT"
repository = "https://github.com/tayu0110/primality-test.git"
description = "Primality Test crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
