[package]
name = "primality-test"
version = "0.2.1"
edition = "2021"
authors = ["tayu0110"]
license = "MIT"
repository = "https://github.com/tayu0110/primality-test.git"
description = "Primality Test crate"
keywords = ["primality", "prime", "miller-rabin", "math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
